Add form collection capability, clean up code User can now enter desired dimensions in a text form and click submit/press enter to render a new grid in the same page area.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
     <title>Etch-a-Sketch</title>
 </head>
 <body>
+    <div class="header">
+        <h1>Etch-A-Sketch! (Kinda)</h1>
+    </div>
     <div class="gridContainer"></div>
+    <div class="form">
+        <form>
+            <label for="squares">Enter dimensions:</label>
+            <input type="text" id="squares" name="squares">
+            <input type="submit">
+        </form>
+    </div>
     
 </body>
 </html>
